<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/nav_home"-->
<!--        android:icon="@drawable/ic_homes"-->
<!--        android:title="Home" />-->

    <item
        android:id="@+id/navigation_main_user_page"
        android:icon="@drawable/ic_profile"
        android:title="User Page" />
    <item
        android:id="@+id/nav_add_job"
        android:icon="@drawable/ic_add"
        android:title="Add Job" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/chatting"
        android:title="Chat" />
</menu>
